--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mantine/modals": "^7.5.0",
     "@mantine/notifications": "^7.5.0",
     "@mantine/nprogress": "^7.5.0",
+    "@tabler/icons-react": "^2.47.0",
+    "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "embla-carousel-react": "^7.1.0",
     "next": "14.1.0",
